# voca

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  voca-speech-model.txt
.Jules/: palette.md
proto/google/cloud/speech/v2/: streaming.proto
src/: api.rs  audio.rs  audio_bars_ui.rs  hook.rs  logic.rs  main.rs  ocr.rs  types.rs  ui.rs  utils.rs  whisper.rs
