[package]
name = "voca"
version = "0.1.0"
edition = "2021"

[dependencies]

cpal = "0.15.2"
hound = "3.5"
reqwest = { version = "0.11", features = ["multipart", "json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full", "sync"] }

enigo = "0.1"

lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

eframe = "0.26"
egui = "0.26"
winreg = "0.52"
tray-icon = "0.14"
earshot = "1.0.0"
image = "0.24"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Com"
]


